# python-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
src/pythontemplateproject/: __init__.py  test.py
