[project]
name = "pythontemplateproject"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ikura1", email = "ikura.lab@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "flake8-isort>=6.0.0",
    "flake8>=5.0.4",
    "bandit>=1.7.5",
]

[tool.hatch.metadata]
allow-direct-references = true
